IN DEVELEPMENT ======= 1.2.8

- added: framework.stats.timeout
- added: template supports rendering of other templates or views

- updated: NoSQL v2.0.0
- updated: builders.schema(), builders.defaults()

- fixed: @{user}

======= 1.2.7-1

- added: framework.stats.request.delete
- added: framework.stats.request.put
- added: framework.stats.request.blocked
- added: framework.stats.request.pending
- added: framework.stats.response.forwarding (host redirecting)
- added: controller.run() - to run async tasks

- updated: complete rewrited markdown parser (more than 50% better performance)
- updated: complete rewrited markdown example
- updated: framework.usage informations

- fixed: request.hostname()
- fixed: builders.schema (default declaration)

======= 1.2.7

- added: definitions
- added: framework.restrictions class
- added: framework.async class
- added: framework.injectConfig()
- added: framework.injectDefinition()
- added: framework.injectController()
- added: framework.eval()
- added: framework.response501() and controller.view501() - 501 Not Implemented
- added: framework.redirect(oldHost, newHost, withPath, permament)
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/redirect-host
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/scheduler
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-async
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-eval
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-inject-module
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-inject-controller
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-inject-config
- added: new example https://github.com/petersirka/partial.js/tree/master/examples/framework-inject-definition